google ads addition

--- a/favorites-index.html
+++ b/favorites-index.html
@@ -56,5 +56,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbRLVtnxgOTPF4I23qMVJ908WFl6-TDOc&libraries=places&callback=initMap"
     defer
   ></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289504700113149"
+     crossorigin="anonymous"></script>
   <script src="favorites.js"></script>
 </html>
