--- a/about-index.html
+++ b/about-index.html
@@ -63,4 +63,6 @@
       </p>
     </div>
   </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289504700113149"
+     crossorigin="anonymous"></script>
 </html>
