--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbRLVtnxgOTPF4I23qMVJ908WFl6-TDOc&libraries=places&callback=initMap&serves_vegetarian_food"
     defer
   ></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289504700113149"
+     crossorigin="anonymous"></script>
   <!--<script
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initAutocomplete&libraries=places&v=weekly"
 defer
