google ads head addition

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289504700113149"
+     crossorigin="anonymous"></script>
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
