favorites page redesigned

--- a/favorites-index.html
+++ b/favorites-index.html
@@ -25,8 +25,8 @@
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="skeleton.css" />
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,10 +43,10 @@
     <h2 class="favorites-header">
       Favorites List
       <img
-        src="images/goodgreens-logo-reversed.png"
+        src="images/Sushi roll_Flatline.png"
         alt="whimsical leaf logo"
-        width="63px"
-        height="63px"
+        width="120vw"
+        height="120vw"
       />
     </h2>
     <div id="favorites-list-container">
