--- a/favorites-index.html
+++ b/favorites-index.html
@@ -30,7 +30,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="images/goodgreens-logo.png" />
   </head>
   <body class="favorites-background-image">
     <h1 class="favorites-nav">
@@ -47,6 +47,7 @@
         alt="whimsical leaf logo"
         width="120vw"
         height="120vw"
+        id="favoriteimg"
       />
     </h2>
     <div id="favorites-list-container">
