--- a/about-index.html
+++ b/about-index.html
@@ -28,7 +28,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="images/goodgreens-logo.png" />
   </head>
 
   <body class="background-image-about-us">
